# habemus

./: .gitignore
habemus-backend/: pom.xml
habemus-backend/habemus-webapp/: pom.xml
habemus-frontend/: .prettierrc.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json
habemus-frontend/e2e/src/: app.e2e-spec.ts
habemus-frontend/src/: index.html  styles.scss
habemus-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  routes.ts
habemus-frontend/src/app/guards/: auth.guard.ts
habemus-frontend/src/app/models/: CalendarEvent.ts
habemus-frontend/src/app/services/: auth.service.ts  dialog.service.ts  snackbar.service.ts
habemus-frontend/src/scss/: _angular-material-theme.scss  _functions.scss  _helpers.scss
habemus-frontend/src/scss/components/: _mat-button-group.scss
habemus-frontend/src/scss/themes/: _app-light.scss
habemus-frontend/src/scss/variables/: _colors.scss  _fonts.scss  _variables.scss
habemus-server/: Cargo.toml  go.mod  go.sum  main.go
habemus-server/controllers/: common.go
habemus-server/src/: config.rs  main.rs
habemus-server/src/controllers/: default.rs
habemus-web/: .prettierignore  .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.json
habemus-web/pages/: calendar.tsx  index.tsx
habemus-web/pages/api/: version.ts
habemus-web/pages/components/: Navigation.tsx  container.tsx  footer.tsx  navigation.tsx
habemus-web/utils/: dom.ts  fetcher.ts
(+23 files in other folders)
