[package]
name = "habemus-server"
version = "0.1.0"
authors = ["Danny Rottstegge <danny@rottstegge.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-cors = "0.5"
dotenv = "0.15.0"
serde = "1"
